--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,8 @@ p {
     background-color: #00274c;
     padding: 50px;
     color: white;
+    text-align: center;
+    font-size: 45px;
 }
 @media only screen and (min-width: 800px) {
     .container {
