--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,9 @@ p {
 }
 .teaching ul{
     border: solid 2px black;
+    padding: 50px;
+    line-height: 45px;
+    box-shadow: 10px 10px grey;
 }
 @media only screen and (min-width: 800px) {
     .container {
