--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,6 @@ h1 {
 }
 
 #logo {
-    background-color: #B5985A;
     float: left;
     margin-left: 5%;
     margin-top: 25px;
@@ -412,6 +411,14 @@ p {
     line-height: 45px;
     box-shadow: 10px 10px grey;
 }
+#logo {
+    background-color: #B5985A;
+    padding: 25px;
+    margin-top: 0px;
+    box-shadow: 0px 10px 10px grey; 
+
+}
+
 @media only screen and (min-width: 800px) {
     .container {
         display: grid;
