--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,12 @@ p {
 }
 
 
-/* Start of Teaching page style */
+/* ===============================
+   ===============================
+   Start of Teaching Style
+   ===============================
+   ===============================
+*/
 .teaching{
     grid-column: 2/4;
 }
@@ -411,6 +416,9 @@ p {
     line-height: 45px;
     box-shadow: 10px 10px grey;
 }
+.teaching h3{
+    margin-top: 20px;
+}
 #logo {
     background-color: #B5985A;
     padding: 25px;
@@ -418,6 +426,12 @@ p {
     box-shadow: 0px 10px 10px grey; 
 
 }
+/* ===============================
+   ===============================
+   END OF Teaching Style
+   ===============================
+   ===============================
+*/
 
 @media only screen and (min-width: 800px) {
     .container {
