--- a/css/style.css
+++ b/css/style.css
@@ -414,7 +414,7 @@ p {
     border: solid 2px black;
     padding: 50px;
     line-height: 45px;
-    box-shadow: 10px 10px grey;
+    box-shadow: 0px 10px 10px grey;
 }
 .teaching h3{
     margin-top: 20px;
