--- a/css/style.css
+++ b/css/style.css
@@ -313,9 +313,8 @@ h1 {
 
 /*End the media query*/
 
-/* Picked a random blue color; change later!!!*/
 #currentpage {
-    color: #1D59DE;
+    color: #00274c;
 }
 
 /* ===============================
