--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ h1 {
 
 #logo {
    /* background-color: #B5985A; */
-   /* background-color: #3c78d8; */
+    background-color: #3c78d8; 
    opacity: .8;
    padding: 20px;
    margin-top: 0px;
