changed current page color

--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ h1 {
 /*End the media query*/
 
 #currentpage {
-    color: #00274c;
+    color: #43529f;
 }
 
 /* ===============================
