--- a/css/style.css
+++ b/css/style.css
@@ -412,6 +412,9 @@ p {
     grid-row: 4 / 5;
 }
 
+.container li {
+  margin-bottom:10px;
+}
 
 /* ===============================
    ===============================
