--- a/css/style.css
+++ b/css/style.css
@@ -620,3 +620,71 @@ a:hover {
   text-decoration-color:none;
 color: #43529f;
 }
+
+/* ===============================
+   ===============================
+   End of research Style
+   ===============================
+   ===============================
+*/
+/* ===============================
+   ===============================
+   Start of media Style
+   ===============================
+   ===============================
+*/
+
+.linkheading {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+}
+
+.professional {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.professional ul {
+  list-style-type: none;
+}
+
+.professional a {
+  text-decoration: none;
+  color: black;
+  line-height: 2;
+}
+
+.professional a:hover {
+  color: #3c78d8;
+}
+
+.collaborators {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+
+}
+
+.collaborators ul {
+  list-style-type: none;
+
+}
+
+.collaborators a {
+  text-decoration: none;
+  color: black;
+  line-height: 2;
+
+}
+
+.collaborators a:hover {
+  color: #3c78d8;
+}
+
+
+
+/* ===============================
+   ===============================
+   END OF media Style
+   ===============================
+   ===============================
+*/
