--- a/css/style.css
+++ b/css/style.css
@@ -633,51 +633,23 @@ color: #43529f;
    ===============================
    ===============================
 */
-
-.linkheading {
-    grid-column: 2 / 4;
-    grid-row: 1 / 2;
+.media {
+      grid-column: 2 / 4;
 }
 
-.professional {
+.mediaheading {
+    grid-column: 2 / 4;
+    grid-rows: 1 / 3;
+}
+
+.examples {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
 
-.professional ul {
-  list-style-type: none;
-}
-
-.professional a {
-  text-decoration: none;
-  color: black;
-  line-height: 2;
-}
-
-.professional a:hover {
-  color: #3c78d8;
-}
-
-.collaborators {
-  grid-column: 3 / 4;
-  grid-row: 2 / 3;
-
-}
-
-.collaborators ul {
-  list-style-type: none;
-
-}
-
-.collaborators a {
-  text-decoration: none;
-  color: black;
-  line-height: 2;
-
-}
-
-.collaborators a:hover {
-  color: #3c78d8;
+.german {
+  grid-column:2/4;
+  grid-row:3/4;
 }
 
 
