--- a/css/style.css
+++ b/css/style.css
@@ -639,7 +639,7 @@ color: #43529f;
 
 .mediaheading {
     grid-column: 2 / 4;
-    grid-rows: 1 / 3;
+    grid-row: 1 / 3;
 }
 
 .examples {
@@ -666,6 +666,25 @@ color: #43529f;
 /* ===============================
    ===============================
    END OF media Style
+   ===============================
+   ===============================
+*/
+
+
+/* ===============================
+   ===============================
+   Start of contact Style
+   ===============================
+   ===============================
+*/
+.contactpic {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+}
+
+/* ===============================
+   ===============================
+   End of contact Style
    ===============================
    ===============================
 */
