--- a/css/style.css
+++ b/css/style.css
@@ -685,6 +685,10 @@ color: #43529f;
     grid-column: 2 / 4;
     grid-row: 1 / 2;
 }
+.info{
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
 
 /* ===============================
    ===============================
