--- a/css/style.css
+++ b/css/style.css
@@ -687,10 +687,11 @@ color: #43529f;
 }
 .contactinfo{
     grid-column: 3 / 4;
-    grid-row: 2 / 3;
-    background-color:white;
+    grid-row: 2/9;
+    background-color: white;
     padding: 30px;
-    margin-top:25px;
+    padding-top: 100px;
+    margin-top: 25px;
     line-height: 25px;
     box-shadow: 5px 5px 8px grey;
 }
