footer style added

--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,13 @@ h1 {
     border: 2px solid black;
 }
 
+footer {
+    grid-column: 1 / -1;
+    grid-row: 8 / auto;
+    padding: 30px;
+    text-align: center;
+    font-weight: 500;
+}
 
 /*tablet*/
 @media screen and (max-width: 900px) {
