--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,10 @@ h1 {
     border: 2px solid black;
 }
 
+.media_title {
+  font-style: italic;
+}
+
 footer {
     grid-column: 1 / -1;
     grid-row: 8 / auto;
