--- a/css/style.css
+++ b/css/style.css
@@ -292,9 +292,12 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 40px;
     text-align: center;
     font-weight: 700;
+    /* z-index:  */
 }
+
 
 /*tablet*/
 @media screen and (max-width: 900px) {
