--- a/css/style.css
+++ b/css/style.css
@@ -553,24 +553,20 @@ a:hover {
    ===============================
    ===============================
 */
+
 .contactpic {
     grid-column: 2 / 4;
     grid-row: 2 / 3;
+    justify-content: center;
+    align-items: center;
 }
 .contactheading {
     grid-column: 2 / 4;
     grid-row: 1 / 2;
 }
 .contactinfo{
-    grid-column: 3 / 4;
-    grid-row: 2/9;
-    padding-top: 100px;
-    background-color: white;
-    padding: 30px;
-    padding-top: 100px;
-    margin-top: 25px;
-    line-height: 25px;
-    box-shadow: 5px 5px 8px grey;
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
 }
 
 /* ===============================
@@ -726,9 +722,18 @@ color: #43529f;
    ===============================
    ===============================
 */
-.contactinfo{
-    grid-column: 2/4;
-    grid-row: 19/20;
+.contactpic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10%;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.contactinfo {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
 }
 
 /* ===============================
