updated contact page mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -556,18 +556,19 @@ a:hover {
 
 .contactpic {
     grid-column: 2 / 4;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
     justify-content: center;
     align-items: center;
 }
-.contactheading {
-    grid-column: 2 / 4;
-    grid-row: 1 / 2;
-}
-.contactinfo{
+
+.contactinfo {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
 }
+/* .contactheading {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+} */
 
 /* ===============================
    ===============================
@@ -728,12 +729,12 @@ color: #43529f;
     align-items: center;
     margin-left: 10%;
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
 }
 
 .contactinfo {
     grid-column: 3 / 4;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
 }
 
 /* ===============================
