--- a/css/style.css
+++ b/css/style.css
@@ -562,13 +562,15 @@ a:hover {
 }
 
 .contactinfo {
+    background-color:white;
+    padding: 25px;
+    margin-top:25px;
+    line-height: 25px;
+    box-shadow: 5px 5px 8px grey;
     grid-column: 2 / 4;
     grid-row: 3 / 4;
 }
-/* .contactheading {
-    grid-column: 2 / 4;
-    grid-row: 1 / 2;
-} */
+
 
 /* ===============================
    ===============================
@@ -613,6 +615,11 @@ a:hover {
     }
     
     .contactinfo {
+        background-color:white;
+        padding: 25px;
+        margin-top:25px;
+        line-height: 25px;
+        box-shadow: 5px 5px 8px grey;
         grid-column: 3 / 4;
         grid-row: 1 / 2;
     }
