--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,8 @@ footer {
 /*End the media query*/
 
 #currentpage {
-    color: #43529f;
+    color: #060829!important;
+    text-decoration-line:underline;
 }
 
 /* ===============================
@@ -553,12 +554,20 @@ a:hover {
    ===============================
    ===============================
 */
-
+.contact #heading2 {
+  grid-column: 2 / 4;
+  grid-row: 1 / 2;
+}
 .contactpic {
     grid-column: 2 / 4;
-    grid-row: 1 / 2;
+    grid-row: 3 / 4;
     justify-content: center;
     align-items: center;
+}
+@media screen and (max-width: 800px) {
+  .contactpic {
+    display:none;
+  }
 }
 
 .contactinfo {
@@ -570,6 +579,68 @@ a:hover {
     grid-row: 3 / 4;
 }
 
+#formtext{
+  text-align:center;
+  font-family: 'Source Sans Pro', sans-serif;
+  padding-top:20px;
+  grid-column:2/4;
+  grid-row: 3 / 4;
+}
+
+/* Style inputs */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: black;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  opacity:0.8;
+}
+
+/* Style the container/contact section */
+.containered {
+    padding: 10px;
+    font-family: 'Source Sans Pro', sans-serif;
+    grid-column:2/4;
+    grid-row:3/4;
+}
+
+/* Create two columns that float next to eachother */
+.column {
+
+  margin-top: 6px;
+  padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+  #formtext{
+      padding-top:50px;
+  }
+}
 
 /* ===============================
    ===============================
@@ -612,7 +683,7 @@ a:hover {
         grid-column: 2 / 3;
         grid-row: 1 / 2;
     }
-    
+
     .contactinfo {
         background-color:white;
         padding: 25px;
@@ -698,6 +769,7 @@ color: #43529f;
    ===============================
    ===============================
 */
+
 .media {
       grid-column: 2 / 4;
 }
@@ -734,6 +806,9 @@ color: #43529f;
    ===============================
    ===============================
 */
-
-
-
+/* ===============================
+   ===============================
+   Start of footer style
+   ===============================
+   ===============================
+*/
