--- a/css/style.css
+++ b/css/style.css
@@ -554,21 +554,16 @@ a:hover {
    ===============================
    ===============================
 */
-.contact #heading2 {
-  grid-column: 2 / 4;
-  grid-row: 1 / 2;
+.contact {
+  grid-column:2/4;
 }
 .contactpic {
     grid-column: 2 / 4;
-    grid-row: 3 / 4;
+    grid-row: 1 / 2;
     justify-content: center;
     align-items: center;
 }
-@media screen and (max-width: 800px) {
-  .contactpic {
-    display:none;
-  }
-}
+
 
 .contactinfo {
     background-color:white;
@@ -584,7 +579,7 @@ a:hover {
   font-family: 'Source Sans Pro', sans-serif;
   padding-top:20px;
   grid-column:2/4;
-  grid-row: 3 / 4;
+  grid-row: 2 / 3;
 }
 
 /* Style inputs */
@@ -617,12 +612,7 @@ input[type=submit]:hover {
     grid-row:3/4;
 }
 
-/* Create two columns that float next to eachother */
-.column {
 
-  margin-top: 6px;
-  padding: 20px;
-}
 
 /* Clear floats after the columns */
 .row:after {
@@ -632,9 +622,20 @@ input[type=submit]:hover {
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .contactpic {
+    display:none;
+  }
+  #formtext {
+    grid-row:4/5;
+  }
+  .containered {
+    grid-row:5/6;
+  }
+}
 @media screen and (max-width: 600px) {
   .column, input[type=submit] {
-    width: 100%;
+
     margin-top: 0;
   }
   #formtext{
