--- a/css/style.css
+++ b/css/style.css
@@ -288,13 +288,11 @@ h1 {
 }
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 40px;
-    text-align: center;
-    font-weight: 700;
+  grid-column: 1 / -1;
+  grid-row: 6 / 6;
+  padding-top: 30px;
+  text-align: center;
+  font-weight: 700;
     /* z-index:  */
 }
 
@@ -513,7 +511,7 @@ a:hover {
 .professional a {
   text-decoration: none;
   color: black;
-  line-height: 1.6;
+  line-height: 1;
 }
 
 .professional a:hover {
@@ -534,7 +532,7 @@ a:hover {
 .collaborators a {
   text-decoration: none;
   color: black;
-  line-height: 1.2;
+  line-height: 1;
 
 }
 
