--- a/css/style.css
+++ b/css/style.css
@@ -809,8 +809,11 @@ color: #43529f;
 }
 
 .media h3{
-    margin-top: 100px;
+    margin-top: 40px;
     margin-bottom:40px;
+}
+.video h3, .podcast h3{
+  margin-top: 80px;
 }
 
 
