--- a/css/style.css
+++ b/css/style.css
@@ -507,6 +507,11 @@ a:hover {
 
 .professional ul {
   list-style-type: none;
+  background-color:white;
+  padding: 40px;
+  margin-top:30px;
+  line-height: 25px;
+  box-shadow: 5px 5px 8px grey;
 }
 
 .professional a {
