--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,7 @@ a:hover {
   background-color:white;
   padding: 40px;
   margin-top:30px;
+  margin-right: 50px;
   line-height: 25px;
   box-shadow: 5px 5px 8px grey;
 }
@@ -850,6 +851,7 @@ list-style-type: none;
 background-color:white;
 padding: 40px;
 margin-top:30px;
+margin-right: 50px;
 line-height: 25px;
 box-shadow: 5px 5px 8px grey;
 }
