--- a/css/style.css
+++ b/css/style.css
@@ -713,8 +713,9 @@ input[type=submit]:hover {
   
   
     .collaborators {
-      grid-column: 3 / 4;
-      grid-row: 2 / 3;
+      grid-column: 3/4;
+      grid-row: 2/7;
+      margin-bottom: 100px;
     }
 }
 
