--- a/css/style.css
+++ b/css/style.css
@@ -833,6 +833,9 @@ color: #43529f;
 .video h3, .podcast h3{
   margin-top: 80px;
 }
+.video a, .podcast a{
+  grid-column: 2/4;
+}
 
 
 /* ===============================
