--- a/css/style.css
+++ b/css/style.css
@@ -656,9 +656,10 @@ input[type=text], select, textarea {
 input[type=submit] {
   background-color: black;
   color: white;
-  padding: 12px 20px;
+  padding: 10px 20px;
   border: none;
   cursor: pointer;
+  font-size: 13px;
 }
 
 input[type=submit]:hover {
