--- a/css/style.css
+++ b/css/style.css
@@ -815,19 +815,11 @@ input[type=submit]:hover {
     grid-column: 2 / 4;
 }
 
-.research dt{
-  /*border: solid 1px grey;*/
-  background-color:white;
-  padding: 25px;
-  margin-top:25px;
-  line-height: 25px;
-  box-shadow: 5px 5px 8px grey;
-}
 .research h3{
     margin-top: 40px;
     margin-bottom:40px;
 }
-.research ul{
+.research li{
   /*border: solid 1px grey;*/
   background-color:white;
   padding: 30px;
@@ -836,6 +828,9 @@ input[type=submit]:hover {
   box-shadow: 5px 5px 8px grey;
 }
 
+.research ul {
+  list-style: none;
+}
 .research p{
   margin-top:55px;
 }
